fix: about section spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -8,12 +8,10 @@ main {
   margin: var(--border-dist);
   padding: 2rem;
   border: 1px solid var(--clr-primary);
-  background: linear-gradient(
-    160deg,
-    var(--clr-base),
-    color-mix(in srgb, var(--clr-base) 60%, var(--clr-secondary)),
-    color-mix(in srgb, var(--clr-base) 94%, var(--clr-primary))
-  );
+  background: linear-gradient(160deg,
+      var(--clr-base),
+      color-mix(in srgb, var(--clr-base) 60%, var(--clr-secondary)),
+      color-mix(in srgb, var(--clr-base) 94%, var(--clr-primary)));
 }
 
 nav {
@@ -27,7 +25,7 @@ nav {
   border-bottom-left-radius: 20px;
   display: flex;
   align-items: center;
-  background: var(--clr-secondary);
+  background: var(--clr-base);
 }
 
 .nav-links {
@@ -74,11 +72,9 @@ nav {
 }
 
 h2 {
-  padding-top: 3rem;
   color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
   text-align: center;
-  text-decoration: underline
-    color-mix(in srgb, var(--clr-primary) 70%, var(--clr-secondary)) 2px;
+  text-decoration: underline color-mix(in srgb, var(--clr-primary) 70%, var(--clr-secondary)) 2px;
   font-size: clamp(3rem, 6vw + 0.5rem, 3.5rem);
 }
 
